# dma_pcie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_test/pcie/pcie_autogen/: moc_predefs.h
build_test/src/PCIE_Demo_QT_autogen/: moc_predefs.h  mocs_compilation.cpp
build_test/src/PCIE_Demo_QT_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_mylistwidget.cpp.d  moc_speedchartwidget.cpp.d
common/InOutputData/: CMakeLists.txt  FileDataProvider.h  FileHandle.cpp  FileHandle.h  FileHandleManager.cpp  FileHandleManager.h  IOCPHandle.cpp  IOCPHandle.h  InputBlock.h  InputDataFromFileUseIOCP.cpp  InputDataFromFileUseIOCP.h  InputDataFromFileUsePOSIX.cpp  InputDataFromFileUsePOSIX.h  InputDataFromMemory.cpp  InputDataFromMemory.h  InputDataFromSHM.cpp  InputDataFromSHM.h  OrderedDataProcessor.cpp  OrderedDataProcessor.h  OverlappedQueue.cpp  OverlappedQueue.h  PreadFileDataProvider.cpp  PreadFileDataProvider.h  VirtualMemoryBuffer.h
common/utils/: AlignedBufferPool.cpp  AlignedBufferPool.h  CMakeLists.txt  Logger.cpp  Logger.h  ShmRing.cpp  ShmRing.h  ThreadAffinity.h
config/: config.json
docs/: io_path_overhaul.md
pcie/: CMakeLists.txt  DeviceHandle.h  DmaChannel.cpp  DmaChannel.h  DmaChannelAsync.cpp  DmaChannelAsync.h  DmaChannelCommon.h  DmaChannelLinux.cpp  DmaChannelLinux.h  PcieDevice.cpp  PcieDevice.h  PcieDeviceLinux.cpp  PcieDeviceLinux.h  PcieFacade.cpp  PcieFacade.h  PcieScanner.cpp  PcieScanner.h  PcieTypes.h  SPSCDescriptorQueue.cpp  SPSCDescriptorQueue.h  SPSCMemoryQueue.cpp  SPSCMemoryQueue.h
scripts/: scan_params.fish
src/: CMakeLists.txt  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylistwidget.cpp  mylistwidget.h  resources.qrc  speedchartwidget.cpp  speedchartwidget.h
tools/: pcie_csv_analysis.py  pcie_demo_stop.sh  read_pcie_summary.py  run_pcie_demo.sh  shm_consumer_test.cpp  shm_producer.cpp  update_config.py  xdma_write_bench  xdma_write_bench.c
